Attempting to fix minor navbar spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,11 @@ html, body {
 }
 
 .navbar-brand {
-    /*font-weight: bold;*/
     font-size: 18px;
+
+    /* Override margins for equal spacing on both sides */
+    margin-right: .5rem;
+    margin-left: .5rem;
 }
 
 .navbar .navbar-brand:hover {
